# learning_llvm

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.sh  coverage.sh  init.sh  lint.sh  setup.sh
examples/: add.b  assign.b  assign_simple.b  f.b  func.b  literal_coersion.b  test.b  type.b
include/: ast.h  code_generation_visitor.h  compile_error.h  compiler.h  error.h  file_io.h  frontend.h  lexer.h  operation_map.h  parser.h  print_visitor.h  source_location.h  token_type.h  type_check_visitor.h  visitor.h
include/codegen/: code_generation_visitor.h  operation_map.h
include/utils/: container.h
llvm_ir_snippets/: array.ll  example.ll  test.ll
src/: ast.cxx  code_generation_visitor.cxx  file_io.cxx  frontend.cxx  lexer.cxx  main.cxx  operation_map.cxx  parser.cxx  type_check_visitor.cxx
src/codegen/: code_generation_visitor.cxx  operation_map.cxx
tests/: CMakeLists.txt  codegen_test.cxx  lexer_test.cxx  parser_test.cxx  utils_test.cxx
